# Calculator

./: .gitignore  CMakeLists.txt  README.md
Calculator_Qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui
build-Calculator_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Calculator_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Calculator_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: main.cpp.37086B6D750C4FDE.idx  mainwindow.cpp.22570BAAF5420809.idx  mainwindow.h.6FE0A00B582CFE9C.idx  ui_mainwindow.h.D08C0C34F0337BAF.idx
build-Calculator_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  test_test.cpp
